--- a/webpack/src/scss/components/_mixins.scss
+++ b/webpack/src/scss/components/_mixins.scss
@@ -102,3 +102,17 @@
         }
     }
 }
+// $container-padding-x: 1.5rem;
+// // Source mixin
+// @mixin make-container($padding-x: $container-padding-x) {
+//     width: 100%;
+//     padding-right: $padding-x;
+//     padding-left: $padding-x;
+//     margin-right: auto;
+//     margin-left: auto;
+//   }
+  
+//   // Usage
+//   .custom-container {
+//     @include make-container();
+//   }
