--- a/webpack/src/scss/components/_fonts.scss
+++ b/webpack/src/scss/components/_fonts.scss
@@ -1,6 +1,14 @@
+a {
+  text-decoration: unset;
+  &:hover {
+    color: white;
+  }
+}
 .acf-block {
   h1,
-  h2 {
+  h2,
+  .head-1,
+  .head-2 {
     color: $textPrimary;
     font-family: "Poppins", sans-serif;
     font-size: 2.5rem;
@@ -8,25 +16,118 @@
     font-weight: 900;
     line-height: 1.5;
     text-align: left;
-    letter-spacing: 4px;
+    letter-spacing: 0.16em;
+    margin-bottom: 0.75rem;
+    @include min(fhd) {
+      margin-bottom: 1rem;
+    }
+    @include min(qhd) {
+      letter-spacing: 4px;
+    }
   }
   h3,
-  h4 {
+  h4,
+  .head-3,
+  .head-4 {
     color: $textPrimary;
     font-family: "Montserrat", sans-serif;
     font-size: 1.5;
     font-size: clamp(1.2rem, 1rem + 0.25vw, 1.5rem);
     font-weight: 700;
     line-height: 1.5;
-    letter-spacing: 2.88px;
+    letter-spacing: 0.14em;
+    margin-bottom: 0.75rem;
+    @include min(fhd) {
+      margin-bottom: 1rem;
+    }
+    @include min(qhd) {
+      letter-spacing: 2.88px;
+    }
+  }
+  &--small {
+    @extend .acf-block;
+    @include min(qhd) {
+      width: clamp(300px, 40%, 1336px);
+      margin-right: auto;
+      p {
+        width: clamp(300px, 66%, 1336px);
+      }
+    }
+    @include max(fhd) {
+      .button {
+        font-size: 0.85em;
+      }
+    }
+  }
+  &--small-mac {
+    @extend .acf-block;
+    @include min(mac) {
+      width: clamp(300px, 47.5%, 1336px);
+      margin-right: auto;
+      p {
+        width: clamp(300px, 80%, 1336px);
+      }
+    }
+    @include max(fhd) {
+      .button {
+        font-size: 0.85em;
+      }
+    }
+  }
+  &--offcolor {
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    ul > li {
+      color: var(--white);
+    }
   }
 }
-p, .paragraph {
-    color: $textPrimary;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.125rem;
-    font-size: clamp(1rem, 1rem + 0.0125vw, 1.125rem);
-    font-weight: 400;
+p,
+.paragraph {
+  color: $textPrimary;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.125rem;
+  font-size: clamp(1rem, 1rem + 0.0125vw, 1.125rem);
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.12em;
+  margin-block: 0.75rem;
+  @include min(fhd) {
+    margin-block: 1rem;
+  }
+  @include min(qhd) {
     line-height: 1.75;
     letter-spacing: 2.16px;
+  }
+}
+li {
+  @extend .paragraph;
+  margin-block-start: 0;
+}
+.banner {
+  li {
+    @include max(fhd) {
+      font-size: .75em;
     }
+  }
+}
+.c-list {
+  li:not(:has(strong)) {
+    margin: 0;
+  }
+}
+.c-list-rev {
+  li:has(strong) {
+    margin: 0;
+  }
+}
+.c-list-half {
+  li {
+    margin-bottom: .35rem;
+  }
+}
