--- a/webpack/src/scss/components/_nav.scss
+++ b/webpack/src/scss/components/_nav.scss
@@ -7,7 +7,10 @@
 
 
 .nav-logo {
-  width: clamp(6rem, 10.41vw, 25rem);
+  width: 12rem;
+  @include min(mac) {
+    width: clamp(6rem, 4rem + 10vw, 15rem);
+  }
   aspect-ratio: 3/1;
   height: auto;
   transition: 0.2s ease-in-out;
@@ -35,18 +38,34 @@
   .navbar {
     background: white;
     border-bottom: 1px solid #e7e7e7;
-    min-height: $navHeight;
+    @include max(desktop) {
+      padding-block: 0;
+    }
+    @include min(mac) {
+      min-height: $navHeight;
+    }
   }
   .nav-item {
+    margin-block: 0;
     &:last-child {
       .nav-link {
         @extend .button;
         @extend .button--primary;
-        margin-left: 2rem;
+        @include max(desktop) {
+          display: inline-block;
+        }
+        @include min(desktop) {
+          margin-left: 2rem;
+        }
       }
     }
     &:not(:last-child) .nav-link {
-      padding-inline: 2rem;
+      @media (min-width:992px) and (max-width:1440px) {
+        padding-inline: .5rem;
+      }
+      @include min(fhd) {
+        padding-inline: 2rem;
+      }
       font-weight: 500;
       color: $textPrimary;
       transition: .2s ease-in-out;
