--- a/assets/css/libs.css
+++ b/assets/css/libs.css
@@ -3,4 +3,5 @@
   \*****************************************************************************************************************************************/
 body {
   color: red;
+  background-color: red;
 }
