--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,9 @@
-/*!******************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[1].use[1]!./node_modules/sass-loader/dist/cjs.js!./src/scss/theme.scss ***!
-  \******************************************************************************************************************************************/
-
+/*!********************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/scss/theme.scss ***!
+  \********************************************************************************************************************************************************/
+.autoprefixer-test {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  color: blue;
+}
